--- a/RunCoin/Info.plist
+++ b/RunCoin/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow RunCoin to access your phone&apos;s camera.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow RunCoin to import a photo for your profile.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Nunito-Black.ttf</string>
