--- a/RunCoin/Info.plist
+++ b/RunCoin/Info.plist
@@ -56,6 +56,7 @@
 	<string>Allow RunCoin to import a photo for your profile.</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Nunito-Regular.ttf</string>
 		<string>SF-Pro-Text-SemiboldItalic.otf</string>
 		<string>SF-Pro-Text-RegularItalic.otf</string>
 		<string>SF-Pro-Text-Regular.otf</string>
