--- a/RunCoin/GoogleService-Info.plist
+++ b/RunCoin/GoogleService-Info.plist
@@ -17,21 +17,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.runslick.RunCoin</string>
+	<string>run.runcoin.runcoin</string>
 	<key>PROJECT_ID</key>
 	<string>runcoin-c565b</string>
 	<key>STORAGE_BUCKET</key>
 	<string>runcoin-c565b.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:230205021227:ios:8ebb852f9067f46c</string>
 	<key>DATABASE_URL</key>
