fix network calls for accountvc to speed up process for editing profile info and image.

--- a/RunCoin/Info.plist
+++ b/RunCoin/Info.plist
@@ -45,7 +45,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>FacebookAppID</key>
 	<string>1578908008895765</string>
 	<key>FacebookDisplayName</key>
@@ -65,9 +65,11 @@
 		<string>MKDirectionsModePedestrian</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string>Allow RunCoin to access your phone's camera.</string>
+	<string>Allow RunCoin to access your phone&apos;s camera.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>RunCoin needs to use your location to map the route that you&apos;re running.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>RunCoin needs to use your location to map the route that you're running.</string>
+	<string>RunCoin needs to use your location to map the route that you&apos;re running.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allow RunCoin to import a photo for your profile.</string>
 	<key>UIAppFonts</key>
@@ -119,8 +121,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
